# bodyloop-sdk-python

./: .gitignore  LICENSE  README.md  generate-api-client.sh  generate-api-client.yml  openapi.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
experiments/: a_create_client.py  b_load_probands.py
scripts/: prepare_openapi_for_codegen.py
src/bodyloop_sdk/: __init__.py
src/bodyloop_sdk/client/: README.md  __init__.py
src/bodyloop_sdk/client/models/: __init__.py  address.py  analyzed_avatar_3d_parameters.py  angle.py  angle_angles_type_0.py  avatar_3d_parameters_input.py  avatar_3d_parameters_input_clothing_type_0.py  avatar_3d_parameters_input_model_type_0.py  avatar_3d_parameters_input_pose_type_0.py  avatar_3d_parameters_output.py  avatar_3d_parameters_output_clothing_type_0.py  avatar_3d_parameters_output_model_type_0.py  axis.py  axis_rotation_type_0.py  biomech_system_manager_models_scanner_init_target.py  biomech_system_manager_models_scanner_init_target_state.py  biomech_system_manager_models_scanner_init_target_state_status_type_0.py  biomech_system_manager_models_viatar_target.py  biomech_system_manager_models_viatar_target_state.py  biomech_system_manager_models_viatar_target_state_status_type_0.py  body_apitoken_api_v2_authentification_users_username_api_token_post.py  body_apply_preset_api_v2_viatars_viatar_id_preset_put.py  body_create_first_admin_api_v2_authentification_users_first_admin_post.py  body_create_preset_api_v2_presets_post.py  body_create_user_api_v2_authentification_users_post.py  body_diagnostics_api_v2_system_diagnostic_post.py  (+120 more)
tests/: test_bodyloop_sdk.py  test_version.py
(+117 files in other folders)
