[project]
name = "bodyloop-sdk"
version = "0.1.0"
description = "Python SDK for the BodyLoop API for seamless ecosystem integration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/BodyLoop/bodyloop-pypi"
Repository = "https://github.com/BodyLoop/bodyloop-pypi"
Issues = "https://github.com/BodyLoop/bodyloop-pypi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bodyloop_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
