[project]
name = "bodyloop-sdk"
dynamic = ["version"]
description = "Python SDK for the BodyLoop API for seamless ecosystem integration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.4.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
]

[project.urls]
Homepage = "https://github.com/BodyLoop/bodyloop-pypi"
Repository = "https://github.com/BodyLoop/bodyloop-pypi"
Issues = "https://github.com/BodyLoop/bodyloop-pypi/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
tag_regex = "^(?:v)?(?P<version>.*)$"

[tool.hatch.build.targets.wheel]
packages = ["src/bodyloop_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
